<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Perfil.PerfilVisitado">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/PV_Perfil_TXT"
            android:textSize="20sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/PV_ImagenU"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/imagen_usuario_visitado" />

        <TextView
            android:id="@+id/PV_NombreU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/PV_NombreU"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PV_EmailU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/PV_EmailU"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/PV_Uid_TXT"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/PV_Uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/PV_Uid"
            android:textSize="15sp" />

        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500" />

        <!-- Nombres -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_nombres_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_nombres"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Apellidos -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_apellidos_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_apellidos"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Profesion -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_profesion_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_profesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_profesion"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Telefono -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_telefono_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_telefono"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Edad -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_edad_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_edad"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Domicilio -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_domicilio_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_domicilio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_domicilio"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Proveedor -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/PV_proveedor_TXT"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PV_proveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PV_proveedor"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/Btn_llamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Btn_llamar"
                app:icon="@drawable/ic_llamar" />

            <Button
                android:id="@+id/Btn_enviar_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Btn_enviar_sms"
                app:icon="@drawable/ic_sms" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>